Add compatibility with ActiveSupport 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,12 @@ language: ruby
 rvm:
 - 2.0.0
 - 1.9.3
+gemfile:
+  - gemfiles/Gemfile.activesupport-3.x
+  - gemfiles/Gemfile.activesupport-4.x
+matrix:
+  exclude:
+    - rvm: 1.9.3
+      gemfile: gemfiles/Gemfile.activesupport-4.x
+    - rvm: 2.0.0
+      gemfile: gemfiles/Gemfile.activesupport-3.x
