--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
 - 2.0.0
 - 1.9.3
+notifications:
+  email: false
 gemfile:
   - gemfiles/Gemfile.activesupport-3.x
   - gemfiles/Gemfile.activesupport-4.x
